--- a/client/src/app/pages/user/list/list.component.scss
+++ b/client/src/app/pages/user/list/list.component.scss
@@ -2,21 +2,21 @@
 	display: none;
 }
 .specialitie::-webkit-scrollbar-track {
-    display: none;
+	display: none;
 }
 .specialitie::-webkit-scrollbar {
 	display: none;
 }
 .specialities {
 	display: flex;
-    overflow-x: scroll;
-    width: 100%;
+	overflow-x: scroll;
+	width: 100%;
 	z-index: 99;
-	
-	.active{
-		background: #798C49;
+
+	.active {
+		background: #798c49 !important;
 	}
-	.main__specialities-item{
+	.main__specialities-item {
 		width: 100%;
 		flex: 0 0 fit-content;
 		border-radius: 120px;
@@ -25,13 +25,13 @@
 		backdrop-filter: blur(2px);
 		padding: 5px;
 		margin-right: 10px;
-		&:last-child{
+		&:last-child {
 			margin-right: 0;
 		}
 	}
 }
-.main{
-	&__top{
+.main {
+	&__top {
 		position: fixed;
 		top: 0;
 		left: 0;
@@ -40,54 +40,54 @@
 		padding: 15px;
 		width: 100%;
 	}
-	&__find{
+	&__find {
 		position: relative;
 		margin-top: 10px;
-		img{
+		img {
 			position: absolute;
 			top: 50%;
 			transform: translateY(-50%);
 			left: 15px;
 			z-index: 99;
 		}
-		input{
+		input {
 			padding: 15px 15px 15px 50px;
 		}
 	}
 }
-.list{
+.list {
 	padding-top: 135px;
-	&__wrap{
+	&__wrap {
 		margin-bottom: 20px;
 		display: flex;
 		flex-flow: row wrap;
 		border-radius: 16px;
-		background: rgba(87, 79, 79, 0.70);
+		background: rgba(87, 79, 79, 0.7);
 		backdrop-filter: blur(2px);
 		padding: 15px;
 	}
-	&__img{
+	&__img {
 		flex: 0 0 70px;
-		img{
+		img {
 			width: 70px;
-    		height: 90px;
+			height: 90px;
 			object-fit: cover;
 			border-radius: 5px;
 		}
 	}
-	&__info{
+	&__info {
 		flex: 1 0;
 		padding-left: 15px;
-		&-wrap{
+		&-wrap {
 			display: flex;
 			flex-flow: row wrap;
 			align-items: center;
 			margin-bottom: 5px;
 		}
-		&-img{
+		&-img {
 			flex: 0 0 16px;
 		}
-		&-text{
+		&-text {
 			flex: 1 0;
 			padding-left: 7px;
 		}
